--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <scala.version>2.11</scala.version>
         <spark.version>2.3.1</spark.version>
         <postgresql.version>42.1.4</postgresql.version>
+        <janino.version>3.0.9</janino.version>
     </properties>
 
     <dependencyManagement>
